LESSON 4 - added allure and steps for it